fix and add head data
