# backend/docs/swagger.json
@@ -61,10 +61,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.HeadDataDTO"
-                            }
+                            "$ref": "#/definitions/models.HeadDataDTO"
                         }
                     },
                     "500": {
